# barkingbeaglebone

./: .gitattributes  LICENSE  README.md  am335x_evm.sh.without_gadget  barking_2020-07-17_03-17-12.mkv  barking_2020-07-17_03-17-12_720p.mkv
hidgeneric/: usbgadget-hidgeneric.sh
hidgeneric/hidgeneric-python/: hidtest-hidapi.py  hidtest-pyusb.py
hidgeneric/hidgeneric-rust/src/: main.rs
hidmouse/: usbgadget-hidmouse.sh
hidmouse/hidmouse-rust/: Cargo.toml
hidmouse/hidmouse-rust/src/: main.rs
