[package]
name = "hidmouse-rust"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.69"

log = "0.4.8"
env_logger = { version = "0.7.1", default-features = false }

bytes = "0.5"

